--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
         var url = e.data.url;
 
         if (e.data.action === "nav_foods") {
-            loadiFrame('https://www.amazon.com/s?k=foods&crid=30XUUKTHQ8WAH&sprefix=food%2Caps%2C392&ref=nb_sb_noss_1');
+            loadiFrame('https://itcstore.in/collections/foods/india-products');
             console.log("nav_checking")
         }
 		
